<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Nick Moore

This file is part of ANR Run Tracker

ANR Run Tracker is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">ANR Run Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="corporation">Corporation</string>
    <string name="runner">Runner</string>
    <string name="agendas">Agendas</string>
    <string name="flatline">Flatline</string>
    <string name="deckout">Deck Out</string>
    <string name="timeout">Time Out</string>
    <string name="win">Win</string>
    <string name="lose">Loss</string>
    <string name="draw">Draw</string>
    <string name="player">Player</string>
    <string name="opponent">Against</string>
    <string name="playingAs">As</string>
    <string name="playerRole">As</string>
    <string name="playerFact">Your Faction</string>
    <string name="playerIdent">Using</string>
    <string name="playerAgendas">Scored</string>
    <string name="oppFact">Against</string>
    <string name="oppIdent">Versus</string>
    <string name="oppAgendas">Missed</string>
    <string name="gameEnd">Result</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="logo_descr">ANR Run Tracker Logo</string>
    <string name="new_game">New Game</string>
    <string name="new_match">New Match</string>
    <string name="statistics">Statistics</string>
    <string name="game_title">Game</string>
    <string name="history">Recent History</string>
    <string name="about">About</string>
    <string name="about_text">ANR Run Tracker tracks your games of Android: Netrunner and
        provides statistics based on your performance with and against different factions,
        identities and opponents.\n\nAndroid: Netrunner and other associated trademarks of Fantasy
        Flight Games are used without permission.\n\nThe Android robot is reproduced or modified
        from work created and shared by Google and used according to terms described in the Creative
        Commons 3.0 Attribution License.\n\nANR Run Tracker is released under the GPLv3. You can
        obtain its source code from https://bitbucket.org/kelnage/anr-run-tracker/.</string>
    <string name="add_opponent">Add an opponent</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_opponent_title">Delete Opponent %s?</string>
    <string name="delete_opponent">Are you sure you wish to delete the opponent %s? All your games
        against them will also be removed.</string>
    <string name="opponent_menu">Opponent:</string>
    <string name="played_as_menu">Played As:</string>
    <string name="against_menu">Against:</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="date">On</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="delete_game_title">Delete Game Against %s?</string>
    <string name="delete_game">Are you sure you wish to delete the game against %s?</string>
    <string name="vs">vs</string>
    <string name="game_short_title">%1$s %2$s against %3$s</string>
    <string name="match_short_title">%1$s against %2$s</string>
    <string name="a_bracket_b">%1$s (%2$d)</string>
    <string name="role_win_rate">Role Win Rate</string>
    <string name="runner_faction_win_rate">Runner Win Rate</string>
    <string name="corp_faction_win_rate">Corporation Win Rate</string>
    <string name="zero">0</string>
    <string name="overall_win_rate">Overall Win Rate</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="swap">Swap</string>
    <string name="swap_scores">Swap agenda scores?</string>
    <string name="swap_scores_long">Should the agenda scores be swapped?</string>
    <string name="dont_swap">Don\'t Swap</string>
    <string name="delete_second_game_title">Delete second game?</string>
    <string name="delete_second_game">Do you wish to convert this match into a single game?</string>
    <string name="provide_name">You must provide a name for your opponent</string>
    <string name="game_activity_label">%s Netrunner Game</string>
    <string name="match_activity_label">%1$s Netrunner Match - Game %2$d</string>
    <string name="opponent_activity_label">Choose Your Opponent</string>
    <string name="game_history_activity_label">Recent Run History</string>
    <string name="player_stats_activity_label">Run Stats</string>
    <string name="delete_match_title">Delete Match Against %s?</string>
    <string name="delete_match">Are you sure you wish to delete the match against %s?</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup">Backup Database</string>
    <string name="restore">Restore Database</string>
    <string name="recent_backup">Latest backup was on %1$s</string>
    <string name="no_backups">No backups compatible with this version of %s</string>
    <string name="backup_success">Backed up successfully!</string>
    <string name="backup_failure">There was an error backing up</string>
    <string name="no_database">No database found!</string>
    <string name="overwrite">Overwrite</string>
    <string name="overwrite_backup">This will overwrite an existing backup, continue?</string>
    <string name="overwrite_backup_title">Overwrite existing backup?</string>
    <string name="overwrite_restore">This will overwrite your current database with the most recent backup, continue?</string>
    <string name="overwrite_restore_title">Overwrite current database?</string>
    <string name="unreadable_backup">Database file %s cannot be read</string>
    <string name="restore_success">Restored backup successfully!</string>
    <string name="restore_failure">There was an error restoring the database</string>
    <string name="invalid_backup">The backup file has been corrupted</string>
    <string name="game_type">Type</string>
    <string name="casual">Casual</string>
    <string name="competitive">Competitive</string>
    <string name="sort">Sort</string>
    <string name="order_by">Order By</string>
    <string name="sort_date">Date</string>
    <string name="sort_opponent">Opponent</string>
    <string name="sort_identities">Identities</string>
    <string name="deck_management">Your Decks</string>
    <string name="deck">Deck</string>
    <string name="add_deck">Add a deck</string>
    <string name="name">Name</string>
    <string name="identity">Identity</string>
    <string name="deck_list_activity_label">Your Decks</string>
    <string name="deck_activity_label">%s A Deck</string>
    <string name="delete_deck_title">Delete Deck %s?</string>
    <string name="delete_deck">Are you sure you wish to delete the deck %s? Your games with this deck will not be deleted.</string>
</resources>
