<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ui.GameActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/opponent"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical|right" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/opponent" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/date"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical|right" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameDate" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/playingAs"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_vertical|right" />

                <ToggleButton
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playerRole"
                    android:id="@+id/playerRole"
                    android:textOn="@string/corporation"
                    android:textOff="@string/runner"
                    android:checked="false" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/playerIdent"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_vertical|right" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/playerIdent"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/playerAgendas"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_vertical|right" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/playerAP"
                        android:layout_gravity="center_vertical"
                        android:max="7"
                        android:progress="0"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="0.9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/zero"
                        android:id="@+id/playerAPValue"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|right"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/oppIdent"
                    android:id="@+id/textView8"
                    android:layout_gravity="center_vertical|right" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/oppIdent"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/oppAgendas"
                    android:id="@+id/textView9"
                    android:layout_gravity="center_vertical|right" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/oppAP"
                        android:layout_gravity="center_vertical"
                        android:max="7"
                        android:progress="0"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="0.9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/zero"
                        android:id="@+id/oppAPValue"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|right"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/gameEnd"
                    android:id="@+id/textView10"
                    android:layout_gravity="center_vertical|right" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameEnd"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/notes"
                    android:id="@+id/textView11"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/notes"
                    android:layout_span="2" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|top"
        android:layout_weight="0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_gravity="center"
            android:layout_weight="1.0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_gravity="center"
            android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>