<?xml version="1.0" encoding="utf-8"?>
<!--

Copyright (C) 2013 Nick Moore

This file is part of ANR Run Tracker

ANR Run Tracker is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/overall_win_rate"
                android:id="@+id/textView4"
                android:layout_gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/overall_win_rate"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/role_win_rate"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical|right" />

            <view
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                class="com.androidplot.pie.PieChart"
                android:id="@+id/role_win_rate" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/runner_faction_win_rate"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical|right" />

            <view
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                class="com.androidplot.pie.PieChart"
                android:id="@+id/runner_faction_win_rate" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/corp_faction_win_rate"
                android:id="@+id/textView3"
                android:layout_gravity="center_vertical|right" />

            <view
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                class="com.androidplot.pie.PieChart"
                android:id="@+id/corp_faction_win_rate" />

        </TableRow>

    </TableLayout>

</ScrollView>